--- a/src/Berger.Extensions.Globalization/Berger.Extensions.Globalization.csproj
+++ b/src/Berger.Extensions.Globalization/Berger.Extensions.Globalization.csproj
@@ -4,11 +4,9 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
 	</PropertyGroup>
+
 	<ItemGroup>
-		<Folder Include="Configurations\" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="Berger.Extensions.Entities" Version="1.0.0.6" />
-		<PackageReference Include="Berger.Extensions.Pagination" Version="1.0.0.13" />
+		<PackageReference Include="Berger.Extensions.Base" Version="1.0.0.2" />
+		<PackageReference Include="Berger.Extensions.Pagination" Version="1.0.0.14" />
 	</ItemGroup>
 </Project>
