--- a/src/Berger.Extensions.Globalization/Berger.Extensions.Globalization.csproj
+++ b/src/Berger.Extensions.Globalization/Berger.Extensions.Globalization.csproj
@@ -6,6 +6,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Berger.Extensions.Base" Version="1.0.0.3" />
+		<PackageReference Include="Berger.Extensions.System" Version="1.0.0.1" />
 	</ItemGroup>
 </Project>
